removed language dropdown from set_filters.html

--- a/templates/set_filters.html
+++ b/templates/set_filters.html
@@ -105,12 +105,13 @@
 
 
 
-
-        .language-dropdown {
-            width: 100%;  /* You can set this to any value that suits your design */
-            align-items: center;  /* Center text vertically */
-            justify-content: center;
-        }
+        {##}
+        {#.language-dropdown {#}
+        {#    width: 100%;  /* You can set this to any value that suits your design */#}
+        {#    align-items: center;  /* Center text vertically */#}
+        {#    justify-content: center;#}
+        {#
+{#        #}
 
         /* Add these styles to make the checkboxes the same size */
         .check span {
@@ -370,22 +371,6 @@
 
 
 
-
-
-
-                <div class="row justify-content-center no-gap mb-30">
-                    <div class="col-12 text-center">
-                        <label for="language">Language:</label>
-
-                        <select class="form-control language-dropdown" id="language" name="language">
-                            <option value="en">en</option>
-                            <option value="es">es</option>
-                            <option value="fr">fr</option>
-
-                            <!-- Add more languages here -->
-                        </select>
-                    </div>
-                </div>
 
 
 
