added navbar.html back onto set_filters.html page

--- a/templates/set_filters.html
+++ b/templates/set_filters.html
@@ -153,7 +153,7 @@
     </script>
 </head>
 
-{#{% include 'navbar.html' %}#}
+{% include 'navbar.html' %}
 
 
 <body>
@@ -355,19 +355,6 @@
 
                     </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
                 <!-- Moved 'Apply Filters' Button -->
                 <div class="row mt-4 justify-content-center">
