--- a/templates/movie_card.html
+++ b/templates/movie_card.html
@@ -95,16 +95,16 @@
             margin-top: 2em; /* Pull the container up if needed */
         }
 
+        /******************************************************************************/
 
 
-
+        /* ACTOR CARD AND CAST LIST STYLING */
 
         /* Actor Cards with Relative Lengths */
         .actor-card {
             width: 7.81vw; /* Equivalent to 150px on a 1920px wide viewport */
             margin: 0; /* Margin remains the same */
             padding: 0.625em; /* Equivalent to 10px assuming a base font-size of 16px */
-            /* box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); */
         }
 
 
@@ -161,6 +161,10 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
+
+        /******************************************************************************/
+
+        /* VOTES STYLING */
 
 
         /* New styles for votes-label */
@@ -337,8 +341,8 @@
         }
 
 
+        /******************************************************************************/
 
-        /* Custom Button Style */
 
         /* GRADIENT STYLING */
 
@@ -392,6 +396,7 @@
 
 
         }
+        /******************************************************************************/
 
 
 
@@ -457,7 +462,10 @@
             margin-top: -3.75rem; /* Converts -60px to rem, adjust as needed */
         }
 
+        /******************************************************************************/
 
+
+        /* ARROW BUTTON STYLE */
 
         /* Common styles for both left and right arrow buttons */
         .arrow-button {
@@ -487,7 +495,10 @@
             margin-bottom: 18.75rem; /* Assuming the base font size is 16px, this converts 300px to rem */
         }
 
-/* MEDIA QUERIES */
+        /******************************************************************************/
+
+
+        /* MEDIA QUERIES */
 
         /* Adjustments for mobile layout */
         @media (max-width: 768px) {
@@ -718,7 +729,7 @@
             }
         }
 
-           /* Media Queries for further adjustments */
+        /* Media Queries for further adjustments */
         @media (max-width: 768px) {
             .backdrop-container {
                 min-height: 20vh; /* Even smaller height for mobile devices */
@@ -731,7 +742,7 @@
             }
         }
 
-                /* Modern background color */
+        /* Modern background color */
 
         @media (max-width: 768px) {
             .backdrop-container {
@@ -740,6 +751,7 @@
         }
 
 
+        /******************************************************************************/
 
 
 
